# webnn-onnx-utils

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
src/: attributes.rs  data_types.rs  error.rs  identifiers.rs  lib.rs  operation_names.rs  protos.rs  shape_inference.rs  tensor_data.rs
tests/: attributes_test.rs  data_types_test.rs  identifiers_test.rs  operation_names_test.rs  shape_inference_test.rs  tensor_data_test.rs
