[package]
name = "webnn-onnx-utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared utilities for ONNX <-> WebNN conversion (types, op names, attrs, tensor data, etc.)"

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"

[build-dependencies]
prost-build = "0.12"

[features]
default = []
